# Coreset_Codes

./: .gitattributes  .gitignore  CONTRIBUTING.md  DATA_PIPELINE.md  EVALUATION_METRICS.md  EXPERIMENTS.md  METHODOLOGY.md  README.md  bootstrap_reeval.py  check_k_values.sh  launch_all.sh  main_vs2.tex  recompute_qos.py  updated.tex
coreset_selection/: README.md  __init__.py  __main__.py  constants.py  parallel_runner.py  pyproject.toml  run_all.py  run_scenario.py  setup.py
coreset_selection/.claude/: settings.local.json
coreset_selection/artifacts/: __init__.py  _gen_batches.py  _gen_figures.py  _ma_comparison_figs.py  _ma_generate.py  _ma_geo_maps.py  _ma_helpers.py  _ma_metric_figs.py  _ma_pareto_figs.py  _ma_r_bridge.py  _ma_tables.py  _mg_data_gen.py  _mg_docs.py  _mg_plots.py  _tables_core.py  _tables_legacy.py  _tables_manuscript.py  generator.py  manuscript_artifacts.py  manuscript_generator.py  plots.py  tables.py
coreset_selection/baselines/: __init__.py  _kkm_helpers.py  _kt_helpers.py  _vg_helpers.py  dpp.py  farthest_first.py  herding.py  kernel_thinning.py  kkmeans_nystrom.py  kmeans.py  leverage.py  uniform.py  utils.py  variant_generator.py
coreset_selection/cli/: __init__.py  _commands.py  _config.py  _main.py  _thread_setup.py
coreset_selection/config/: __init__.py  _dc_components.py  _dc_experiment.py  _dc_results.py  constants.py  constants_common.py  dataclasses.py  run_specs.py
coreset_selection/constraints/: __init__.py  calibration.py  proportionality.py
coreset_selection/data/: DATA_VERSION.md  __init__.py  _btl_constants.py  (+13 more)
(+237 files in other folders)
