[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreset-selection"
version = "0.1.0"
description = "Geographically-constrained Pareto coreset selection for multi-objective optimization"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
